frontend/public/styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  list-style: none;
  color: inherit;
}
hr{
  border: none;
  border-bottom: 1px solid #CACDD8;
}
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  scroll-behavior: smooth;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(182, 182, 182);
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #474747;
}

.app_container {
  width: 100%;
}

/* topnav stylying  */
#topNav {
  display: flex;
  background-color: #020202;
  color: white;
  font-size: 12px;
  align-items: center;
  height: 5vh;
  width: 100%;
}
.topNavContent {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 80%;
  height: 100%;
  margin: auto;
}
.topNavLeft {
}
.topNavLeft span {
  color: #a2a6b0;
}

.topNavMiddle {
  display: flex;
  gap: 8px;
  color: #a2a6b0;
  align-items: center;
}
.topNavMiddle a {
  color: white !important;
}
.topNavRight {
  display: flex;
  align-items: center;
  gap: 8px;
}
/* navbar stylying */
#navbar {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 10vh;
}
.navContent {
  justify-content: space-between;
  display: flex;
  align-items: center;
  height: 100%;
  width: 80%;
}
.navbarLeft {
  display: flex;
  align-items: center;
  gap: 2rem;
}
#logo_img{
  width: 25px;
}
.navList {
  display: flex;
  gap: 1rem;
}


.navList li a {
  text-decoration: none;
  font-size: 12px;
  font-weight: 600;
  
}
.navList li a:hover{
  background: #0156FF;
  padding: 0.9rem 12px;
  border-radius: 2rem;
  color: #fff;
  transition: 0.2s ease-in-out;
  
}
.navbarRight {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.cartBox{
  display: flex;
  align-items: center;
  gap: 3px;
}
.cartCount{
  font-size: 12px;
}
.userImg {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}
.navbar_loginBtn{
  background: #0156FF;
  color: #fff;
  border: none;
  padding: 8px 12px;
  border-radius: 5px;
  font-size: 11px;
  cursor: pointer;
  outline: none;

}

/* heroSection stylying  */
.heroSection {
  width: 80%;
  margin: auto;
}
.sliderImg_wrapper {
  width: 100%;
}
.sliderImg_wrapper img {
  width: 100%;
}

/* new Products section stylying  */
.newProducts_section {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.newProducts_header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.newProducts_header h2 {
  font-weight: 600;
  font-size: 22px;
}
.newProducts_card_wrapper {
  width: 100%;
  display: flex;
  height: 400px;
}
.newProducts_card {
  display: flex;
  flex-direction: column;
  width: 220px;
  text-decoration: none !important;
  justify-content: center;
  padding: 1rem;
  gap: 10px;
  transition: 0.3s ease; /* Defining the transition property */
}
.newProducts_card:hover {

  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  
}

.newProducts_stockInfo_para {
  font-size: 10px;
  color: #78a962;
}
.newProducts_imgWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 130px;
  width: 165px;
  align-self: center;
}
.newProducts_Img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.newProduct_review_box {
  font-size: 12px;
  color: #a2a6b0;
}
.newProduct_details {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
}
.newProduct_delPrice {
  font-size: 13px;
  color: #666;
}
.newProduct_price {
  font-size: 19px;
}
.addToCart_btn {
  display: none;
  /* display: flex; */
  padding: 8px 20px;
  gap: 10px;
  align-items: center;
  justify-content: center;
  border-radius: 50px;
  border: 2px solid #0156ff;
  background-color: #fff;
  cursor: pointer;
  width: fit-content;
  align-self: center;
}
.newProducts_card:hover .addToCart_btn{
  display: flex;
}

.addToCart_btn p {
  color: #0156ff;
  font-size: 12px;
}

.Msi_Gs_Series_list_items {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.Msi_Gs_Series_list_items li a {
  text-decoration: none;
  color: #838383;
  font-size: 15px;
  font-weight: 600;
}
.Msi_Gs_Series_active {
  color: #000 !important;
}

.customeBuild_banner {
  display: flex;
  min-width: 233px;
  height: 400px;
  color: white;
  background-image: url("https://images.pexels.com/photos/593093/pexels-photo-593093.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
  background-size: contain;
  position: relative;
  z-index: 2;
}
#customeBuild_banner2 {
  background-image: url("../images/MSI_seires.png") !important;
}
.customBg {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.4);
}
.customBuildContent {
  height: 70%;
  width: 100%;
  align-self: flex-end;
  display: flex;
  justify-content: space-between;
  padding: 1rem 0;
  align-items: center;
  flex-direction: column;
}
.customBuilMainText {
  text-align: center;
}
.customeBuild_banner h3 {
  font-size: 22px;
  letter-spacing: 1px;
}

.customeBuild_banner a {
  font-size: 12px;
}
/* sponcers section  */
.sponcers_wrapper{
  width: 100%;
}
.sponcers_innerWrapper{
  width: 80%;
  margin: auto;
}
.sponcers_img_wrapper{
  /* background-color: red; */
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem 0;
  gap: 1.5rem;
}
.sponcers_img_wrapper img{
  /* width: 200px; */
  flex: 1;
  object-fit: contain;
  height: 65px;

}


/* support section  */
.supportSection {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 3rem;
  background-color: #f5f7ff;
}
.support_box {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  align-items: center;
  justify-content: center;
  width: 265px;
}
.support_box_imgWrapper {
  width: 65px;
  height: 65px;
  border-radius: 50%;
  background-color: #0156ff;
  display: flex;
  align-items: center;
  justify-content: center;
}
.support_box_imgWrapper img {
  width: 50%;
  height: 50%;
  object-fit: cover;
}
.support_box_details {
  display: flex;
  flex-direction: column;
  gap: 12px;
  align-items: center;
  justify-content: center;
}
.support_box_details h2 {
  font-size: 18px;
}
.support_box_details p {
  font-size: 14px;
  text-align: center;
}
/* footer stylying */
.footer {
  width: 100%;
  /* height: 520px; */
  background-color: #020203;
}
.footerInnerContent {
  width: 80%;
  margin: auto;
}
.footer_content {
  padding: 1rem 0rem;
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.footer_subscribe_box {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.footer_subscribe_box_left {
  color: white;
}
.footer_subscribe_box_left h1 {
  font-weight: 500;
  font-size: 31px;
}
.footer_subscribe_box_left p {
  font-size: 12px;
  font-weight: 300;
}
.footer_subscribe_box_right {
  display: flex;
  align-items: center;
  gap: 12px;
}
.footer_subscribe_box_right input {
  width: 390px;
  height: 45px;
  padding: 0 12px;
  border-radius: 4px;
  border: 2px solid #fff;

  background: #000;
  font-size: 11px;
  color: #fff;
}
.footer_subscribe_btn {
  height: 45px;
  font-size: 11px;
  width: 140px;
  border: none;
  outline: none;
  border-radius: 50px;
  background-color: #0156ff;
  color: #fff;
  cursor: pointer;
}
.footer_items_box {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}
.footer_item {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.footer_item p {
  color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  font-size: 11px;
}
.footer_item_lists {
  color: #fff;
  font-size: 10px;
  font-weight: 400;
}
.footer_item_lists li a {
  text-decoration: none;
}
.footer_item_lists li a span {
  color: #01a4ff;
}

.footer_copywrite_section {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 0;
}
.footer_copywrite_section_item {
  display: flex;

  align-items: center;
  gap: 10px;
}
.footer_copywrite_section_item p {
  color: #fff;
  opacity: 0.6;
  font-size: 11px;
}

